--- a/.github/workflows/check-and-publish.yml
+++ b/.github/workflows/check-and-publish.yml
@@ -10,6 +10,7 @@ on:
   release:
     types: [created]
 
+
 jobs:
   checks:
     strategy:
@@ -30,8 +31,6 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - run: env
-
       - name: Tokens
         shell: python
         env:
@@ -45,15 +44,11 @@ jobs:
                   with open(m, "w") as f:
                       print(os.environ[n], file=f)
 
-      - run: pip install pytest
-
       - name: Tests
         run: |
           python setup.py develop
-          pytest -s --verbose
-
-      - run: ls -l
-        shell: bash
+          pip install pytest
+          pytest
 
   deploy:
 
@@ -81,3 +76,11 @@ jobs:
       run: |
         python setup.py sdist
         twine upload dist/*
+
+    - name: Notify climetlab
+      uses: mvasigh/dispatch-action@main
+      with:
+          token: ${{ secrets.NOTIFY_ECMWFLIBS }}
+          repo: climetlab
+          owner: ecmwf
+          event_type: ecmwf-api-client-updated
