Use `pip install -e .` as an alternative  to `python setup.py develop`.

--- a/.github/workflows/check-and-publish.yml
+++ b/.github/workflows/check-and-publish.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Tests
         run: |
-          python setup.py develop
+          pip install -e .
           pip install pytest
           pytest
 
